--- a/front-end/index/index.css
+++ b/front-end/index/index.css
@@ -1,6 +1,54 @@
 .petitions {
-  width: 40%;
-  height: 10%;
-  border: 2px solid black;
-  border-radius: 0.5rem;
+  z-index: inherit;
+  width: 70%;
+  font-size: 20px;
+  margin-top: 15px;
+  border: 1px solid rgb(97, 97, 97);
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 10px;
+  font-family: "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji";
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+
+  transition: ease-in-out 600ms;
+  backface-visibility: hidden;
+  background-color: #72a0c1;
+}
+
+.allPetitions {
+  z-index: inherit;
+  margin: auto;
+  border-radius: 10px;
+  overflow: auto;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.logIn {
+  width: 4%;
+  border: 1px solid black;
+  border-radius: 10%;
+  text-align: center;
+  background-color: #72a0c1;
+}
+.logIn:link,
+.logIn:active {
+  color: #72a0c1;
+}
+a:hover {
+  color: #a0b9cc;
+}
+.petitions {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.content {
+  width: 30%;
 }
