--- a/front-end/index/index.css
+++ b/front-end/index/index.css
@@ -1,8 +1,73 @@
+body {
+  background-color: burlywood;
+}
 .petitions {
+  width: 20%;
+  border: 2px solid white;
+  border-radius: 5%;
+  padding: 4px;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
 .allPetitions {
+  width: 80%;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.logIn {
+/* selected link */
+a:active,
+a:visited,
+a:link {
+  color: black;
+  text-decoration: none;
+}
+a:hover {
+  color: rgb(146, 132, 132);
+}
+
+h1 {
+  text-align: center;
+}
+
+/* CSS */
+.button {
+  background-color: rgb(189, 165, 135);
+  width: 5%;
+  border: 1px solid transparent;
+  border-radius: 3px;
+  box-shadow: rgba(255, 255, 255, 0.4) 0 1px 0 0 inset;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system, system-ui, "Segoe UI", "Liberation Sans",
+    sans-serif;
+  font-size: 12px;
+  font-weight: 400px;
+  padding: 4px 0.8em;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  text-overflow: clip;
+}
+
+.button:hover,
+.button:focus {
+  background-color: rgb(97, 56, 6);
+}
+
+.button:focus {
+  box-shadow: 0 0 0 4px rgba(0, 149, 255, 0.15);
+}
+
+.button:active {
+  background-color: rgb(189, 165, 135);
+  box-shadow: none;
 }
