--- a/front-end/authenticate/authenticate.css
+++ b/front-end/authenticate/authenticate.css
@@ -20,6 +20,8 @@ body {
   font-family: "Roboto", sans-serif;
   outline: 0;
   background: #f2f2f2;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  border: 0.5px solid grey;
   width: 100%;
   border: 0;
   margin: 0 0 15px;
@@ -37,8 +39,8 @@ body {
   padding: 15px;
   color: #ffffff;
   font-size: 14px;
-  -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
   cursor: pointer;
 }
 .form button:hover,
@@ -99,4 +101,8 @@ body {
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.register-form {
+  margin-top: 40px;
 }
