--- a/front-end/authenticate/authenticate.css
+++ b/front-end/authenticate/authenticate.css
@@ -37,8 +37,8 @@ body {
   padding: 15px;
   color: #ffffff;
   font-size: 14px;
-  -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
   cursor: pointer;
 }
 .form button:hover,
