--- a/front-end/index/index.css
+++ b/front-end/index/index.css
@@ -23,6 +23,7 @@ a:visited,
 a:link {
   color: black;
   text-decoration: none;
+  transition: all 0.3s ease;
 }
 a:hover {
   color: rgb(146, 132, 132);
