--- a/front-end/index/index.css
+++ b/front-end/index/index.css
@@ -6,6 +6,7 @@ body {
   border: 2px solid white;
   border-radius: 5%;
   padding: 4px;
+  margin-left: 20px;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
