--- a/front-end/create/create.css
+++ b/front-end/create/create.css
@@ -40,7 +40,7 @@ body {
   color: #ffffff;
   font-size: 14px;
   -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
+  transition: all 0.3s ease;
   cursor: pointer;
 }
 .form button:hover,
