--- a/front-end/index/index.css
+++ b/front-end/index/index.css
@@ -2,12 +2,19 @@ body {
   background-color: burlywood;
 }
 .petitions {
-  width: 20%;
+  width: 30%;
   border: 2px solid white;
   border-radius: 5%;
   padding: 4px;
   margin-left: 20px;
+  margin-bottom: 10px;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  transition: all 0.5s ease;
+}
+
+.petitions:hover {
+  transform: scale(110%);
+  z-index: 5;
 }
 
 .allPetitions {
