--- a/front-end/petition/petition.css
+++ b/front-end/petition/petition.css
@@ -4,19 +4,17 @@ body {
 
 .petition {
   margin: auto;
-  padding: 20px;
   width: 50%;
   border: 2px solid white;
   border-radius: 5%;
-  padding: 4px;
+  padding: 15px;
   margin-top: 1%;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: relative;
-  z-index: 0;
-  justify-content: center;
+  margin-bottom: 2%;
+  font-size: 23px;
 }
 
 h1 {
@@ -118,18 +116,22 @@ h1 {
   text-decoration: none;
 }
 
-.eshya3 {
-  display: flex;
-}
 img {
-  width: 200px;
+  width: 250px;
   height: 200px;
   display: block;
   margin: 10px auto;
   border-radius: 6px;
-  border: 5px solid grey;
+  border: 2px solid white;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
-.petitionInfo {
-  justify-content: left;
+.goal {
+  text-align: center;
+  margin-bottom: 2%;
+  font-size: 30px;
+}
+
+.title {
+  font-size: 40px;
 }
